--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "antd-mobile-rn": "^2.3.1",
+    "axios": "^0.18.0",
     "expo": "^31.0.2",
+    "express": "^4.16.4",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-elements": "^0.19.1",
@@ -18,7 +20,9 @@
     "react-navigation-redux-helpers": "^2.0.8",
     "react-redux": "^5.1.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
